paper updates/wibbles.

--- a/ISSE12/conclusion.tex
+++ b/ISSE12/conclusion.tex
@@ -98,7 +98,8 @@ themselves are expensive to compute, the entire expression becomes expensive.
 This is analogous to a standard compiler inlining \emph{every} function, which
 would result in infeasible code-size.  
 
-Techniques to improve the efficiency of evaluating eDSLs and borrowing sharing
+Techniques to improve the efficiency of evaluating embedded domain-specific
+languages (eDSLs) and borrowing sharing
 from the host language to the DSL language are needed.  Fortunately in our
 domain, monitoring code is terse, in general.
 
