--- a/ISSE12/main.tex
+++ b/ISSE12/main.tex
@@ -154,10 +154,10 @@ NASA Langley Research Center, Hampton, Virginia  \\
   operational environments, it is common in ultra-critical
   systems to replicate processing units (and their hosted software)
   and incorporate fault-tolerant algorithms to compare the outputs,
-  even if the software is considered to be fault-free.  In this paper
+  even if the software is considered to be fault-free.  In this paper,
   we investigate the use of software monitoring in distributed
   fault-tolerant systems and the implementation of fault-tolerance
-  mechanisms using RV techniques, we describe the Copilot language and
+  mechanisms using RV techniques.  We describe the Copilot language and
   compiler that generates monitors for distributed real-time systems,
   and we discuss two case-studies in which Copilot-generated monitors
   were used to detect onboard software and hardware faults and monitor
