--- a/ISSE12/conclusion.tex
+++ b/ISSE12/conclusion.tex
@@ -99,7 +99,7 @@ This is analogous to a standard compiler inlining \emph{every} function, which
 would result in infeasible code-size.  
 
 Techniques to improve the efficiency of evaluating embedded domain-specific
-languages (eDSLs) and borrowing sharing
+languages (eDSLs) and to transfer ``expression sharing''
 from the host language to the DSL language are needed.  Fortunately in our
 domain, monitoring code is terse, in general.
 
