--- a/ISSE12/overview.tex
+++ b/ISSE12/overview.tex
@@ -34,9 +34,7 @@ discussed by Rushby~\cite{rushbyrv}.  Not modifying the observed program could
 simplify the introduction of RV into certified systems, reducing the need to
 re-evaluate code that is being monitored.  Source code instrumentation can
 modify both the control flow of the instrumented program as well as its timing
-properties.  Rather, an RV approach must isolate monitors in the sense of
-minimizing or eliminating the effects of monitoring on the observed program's
-control flow.
+properties.  
 
 Timing isolation is also necessary for real-time systems to ensure that timing
 constraints are not violated by the introduction of RV.  Assuming a fixed upper
