removed bolt on.

--- a/ISSE12/mavlink.tex
+++ b/ISSE12/mavlink.tex
@@ -350,10 +350,10 @@ updated--barometric altitude is) and causes the stair effect.
 
 \subsection{Discussion}
 The purpose of the case studies is to test the feasibility of using Copilot for
-avonics monitoring.  In the first case-study, Copilot-generated monitors in a
-that ``bolt on'' fault-tolerance to a system that otherwise lacks that
-capability.  In the second, Copilot allows us to synthesize protocol parsers and
-analyzers.
+avonics monitoring.  In the first case-study, Copilot-generated monitors are
+used to implement fault-tolerance mechanisms to decompose the problem of
+implementing a sensor system and implementing fault-tolerance.  In the second,
+Copilot allows us to synthesize protocol parsers and analyzers.
 
 To give a sense of code-sizes, in the pitot tube monitoring case-study, the
 Copilot agreement monitor is around 200 lines, and the generated real-time C
