fixed spelling and typos

--- a/ISSE12/flight-tests.tex
+++ b/ISSE12/flight-tests.tex
@@ -300,6 +300,6 @@ All nodes still agree on a consistent---but wrong---value.
 Fault-tolerant monitoring of real-time systems can relieve the
 monitored underlying implementation of adding in and executing
 fault-tolerant variants of the executed algorithms (but does not
-exclude double-checking such). It can be used as a way to to have
-lower effort in verification of software correctness, while still
-having fault-tolerance seperately added through monitors.
+exclude double-checking such). It can be used as a way to 
+simplify the software assurance effort, while still
+having fault-tolerance separately added through monitors.
